Добавлен функционал для работы с сопроводительными документами к автоинциденту: 1. Создана новая модель данных Document.java; 2. Создан скрипт 013_ddl_create_documents_table.sql; 3. Редактирован dbchangelog.xml; 4. Добавлен репозиторий DocumentCrudRepository.java; 5. Создан и реализован сервис: DocumentService.java, DocumentDataService.java; 6. Редактирование видов: user/accident/create-accident.html, user/accident/edit-accident.html, admin/accident/edit-accident.html, user/accident/show-accident.html; 7. Созданы новые виды: user/accident/show-accident-document.html, user/accident/delete-accident-document-confirm.html, user/accident/delete-accident-document-success.html; 8. Рефакторинг AccidentController.java:  - добавлена зависимость DocumentService,  - рефакторинг методов по отображению информации об автоинциденте пользователю, методов по сохранению, удалению и обновлению автоинцидента,  - создан новый метод для отображения пользователю загруженного сопроводительного документа. 9. Рефакторинг репозитория JdbcTemplateAccidentRepository.java - добавлены новые константы запросов в таблицу documents, рефакторинг методов, отвечающих за удаление автоинцидента; 10. Рефакторинг RuleService.java, RuleDataService.java; 11. Рефакторинг AccidentControllerTest.java - добавлен и инстанцирован объект-заглушка MockMultipartFile, переписаны тесты для методов создания и редактирования автоинцидента. 12. Правка вёрстки видов.